// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders for error 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 20,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "#FD785B",
        "borderRadius": 15,
        "height": 30,
        "marginVertical": 20,
        "width": 30,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    errorLoadingActivity.0
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    errorLoadingActivity.1
  </Text>
</View>
`;

exports[`renders for gold to dollar exchange properly 1`] = `
<RCTScrollView
  data={
    Array [
      Object {
        "__typename": "TokenExchange",
        "amount": Object {
          "currencyCode": "cUSD",
          "localAmount": null,
          "value": "-30",
        },
        "hash": "0x00000000000000000000",
        "makerAmount": Object {
          "currencyCode": "cUSD",
          "localAmount": null,
          "value": "30",
        },
        "status": "Complete",
        "takerAmount": Object {
          "currencyCode": "cGLD",
          "localAmount": null,
          "value": "200",
        },
        "timestamp": 1542306118,
        "type": "EXCHANGE",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={true}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  updateCellsBatchingPeriod={50}
  viewabilityConfigCallbackPairs={Array []}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        focusable={true}
        nativeBackgroundAndroid={
          Object {
            "attribute": "selectableItemBackground",
            "type": "ThemeAttrAndroid",
          }
        }
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
      >
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "space-between",
              "paddingHorizontal": 16,
              "paddingVertical": 12,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "column",
              }
            }
          >
            <Image
              resizeMode="contain"
              source={
                Object {
                  "testUri": "../../../packages/mobile/src/images/exchangeGreenGold.png",
                }
              }
              style={
                Object {
                  "height": 40,
                  "width": 40,
                }
              }
            />
          </View>
          <View
            style={
              Object {
                "flex": 1,
                "marginLeft": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "marginTop": -1,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#2E3338",
                    "fontFamily": "Inter-Medium",
                    "fontSize": 16,
                    "lineHeight": 22,
                  }
                }
              >
                feedItemExchangeTitle
              </Text>
              <Text
                numberOfLines={1}
                style={
                  Array [
                    Array [
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 16,
                        "lineHeight": 22,
                        "marginLeft": "auto",
                        "paddingLeft": 10,
                      },
                      false,
                    ],
                    Object {
                      "color": "#2E3338",
                    },
                  ]
                }
              >
                $
                39.90
              </Text>
            </View>
            <Text
              style={
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 14,
                  "lineHeight": 18,
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Array [
                    undefined,
                    Object {
                      "color": undefined,
                    },
                  ]
                }
              >
                
                200.000
              </Text>
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`renders for loading 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 20,
    }
  }
>
  <ActivityIndicator
    animating={true}
    color="#42D689"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    loadingActivity
  </Text>
</View>
`;

exports[`renders for no transactions 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "paddingHorizontal": 20,
      "paddingVertical": 20,
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "testUri": "../../../packages/mobile/src/images/shiny-dollar.png",
      }
    }
    style={
      Object {
        "height": 108,
        "marginVertical": 20,
        "width": 108,
      }
    }
  />
  <Text
    style={
      Array [
        Object {
          "color": "#81868B",
          "fontFamily": "Hind-Regular",
          "fontSize": 16,
          "lineHeight": 24,
        },
        Object {
          "marginBottom": 10,
          "textAlign": "center",
        },
      ]
    }
  >
    noTransactionActivity
     
  </Text>
  <View
    accessible={true}
    focusable={true}
    hitSlop={
      Object {
        "bottom": 7,
        "left": 7,
        "right": 7,
        "top": 7,
      }
    }
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "borderRadius": 2,
          "flexDirection": "row",
          "paddingHorizontal": 16,
          "paddingVertical": 6,
        },
        Object {
          "backgroundColor": "#42D689",
          "paddingHorizontal": 18,
          "paddingVertical": 8,
        },
        Object {
          "alignSelf": "center",
          "marginTop": 20,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "#81868B",
            "fontFamily": "Hind-SemiBold",
            "fontSize": 13,
            "lineHeight": 20,
            "textAlign": "center",
          },
          Object {
            "color": "#FFFFFF",
          },
          null,
          undefined,
        ]
      }
    >
      global:sendCeloDollars
    </Text>
  </View>
</View>
`;
